--- a/hello_cloud_android/app/src/main/res/navigation/nav_graph.xml
+++ b/hello_cloud_android/app/src/main/res/navigation/nav_graph.xml
@@ -2,4 +2,10 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_graph" />
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/mainFragment">
+    <fragment
+        android:id="@+id/mainFragment"
+        android:name="com.google.hellocloud.MainFragment"
+        android:label="MainFragment" />
+</navigation>
