--- a/hello_cloud_android/app/src/main/res/layout/fragment_main.xml
+++ b/hello_cloud_android/app/src/main/res/layout/fragment_main.xml
@@ -33,18 +33,18 @@
                     android:id="@+id/localEndpointIdLabel"
                     style="@style/TitleTextStyle"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:labelFor="@+id/localEndpointId"
+                    android:layout_weight="1"
                     android:drawableStart="@drawable/id"
+                    android:labelFor="@+id/localEndpointId"
                     android:text="ID" />
 
                 <TextView
                     android:id="@+id/localEndpointId"
                     style="@style/TitleTextStyle"
                     android:layout_width="0dp"
-                    android:layout_weight="3"
                     android:layout_height="45dp"
+                    android:layout_weight="3"
                     android:text="@={model.localEndpointId}" />
             </LinearLayout>
 
@@ -59,67 +59,100 @@
                     android:id="@+id/localEndpointNameLabel"
                     style="@style/TitleTextStyle"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:labelFor="@+id/localEndpointName"
+                    android:layout_weight="1"
                     android:drawableStart="@drawable/name"
+                    android:labelFor="@+id/localEndpointName"
                     android:text="Name" />
 
                 <EditText
                     android:id="@+id/localEndpointName"
                     android:layout_width="0dp"
-                    android:layout_weight="3"
                     android:layout_height="45dp"
+                    android:layout_weight="3"
                     android:autofillHints="The name visible to devices discovering"
                     android:imeOptions="actionDone"
                     android:inputType="text"
                     android:text="@={model.localEndpointName}" />
             </LinearLayout>
 
-            <!-- Advertising -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:gravity="center_vertical"
+                android:layout_margin="10dp"
                 android:orientation="horizontal">
-
-                <TextView
-                    style="@style/TitleTextStyle"
+                <!-- Advertising -->
+                <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:labelFor="@+id/advertisingSwitch"
-                    android:text="Advertising" />
-
-                <com.google.android.material.switchmaterial.SwitchMaterial
-                    android:id="@id/advertisingSwitch"
-                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:checked="@={model.isAdvertising}" />
-            </LinearLayout>
+                    android:layout_marginHorizontal="10dp"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
 
-            <!-- Discovering -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
+                    <TextView
+                        style="@style/TitleTextStyle"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:labelFor="@+id/advertisingSwitch"
+                        android:text="Advertising" />
 
-                <TextView
-                    style="@style/TitleTextStyle"
+                    <com.google.android.material.switchmaterial.SwitchMaterial
+                        android:id="@id/advertisingSwitch"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:checked="@={model.isAdvertising}" />
+                </LinearLayout>
+
+                <!-- Discovering -->
+                <LinearLayout
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:labelFor="@+id/discoveringSwitch"
-                    android:text="Discovering" />
-
-                <com.google.android.material.switchmaterial.SwitchMaterial
-                    android:id="@id/discoveringSwitch"
-                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:checked="@={model.isDiscovering}" />
+                    android:layout_marginHorizontal="10dp"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        style="@style/TitleTextStyle"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:labelFor="@+id/discoveringSwitch"
+                        android:text="Discovering" />
+
+                    <com.google.android.material.switchmaterial.SwitchMaterial
+                        android:id="@id/discoveringSwitch"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:checked="@={model.isDiscovering}" />
+                </LinearLayout>
             </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/incoming_packets"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="10dp"
+                android:layout_weight="1"
+                android:onClick="showIncomingPackets"
+                android:text="Intbox" />
+
+            <Button
+                android:id="@+id/outgoing_packets"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="10dp"
+                android:layout_weight="1"
+                android:onClick="showOutgoingPackets"
+                android:text="Outbox" />
         </LinearLayout>
 
         <ListView
