--- a/hello_cloud_android/app/src/main/res/layout/fragment_main.xml
+++ b/hello_cloud_android/app/src/main/res/layout/fragment_main.xml
@@ -143,7 +143,7 @@
                 android:layout_marginHorizontal="10dp"
                 android:layout_weight="1"
                 android:onClick="showIncomingPackets"
-                android:text="Intbox" />
+                android:text="Inbox" />
 
             <Button
                 android:id="@+id/outgoing_packets"
