Android: Expandable list for outgoing and incoming packets

--- a/hello_cloud_android/app/src/main/res/layout/item_outgoing_file.xml
+++ b/hello_cloud_android/app/src/main/res/layout/item_outgoing_file.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
             android:layout_weight="1"
-            android:text="@{model.toString}" />
+            android:text="@{model.toString()}" />
 
         <FrameLayout
             android:layout_width="wrap_content"
