--- a/hello_cloud_android/app/src/main/res/layout/fragment_incoming_packets.xml
+++ b/hello_cloud_android/app/src/main/res/layout/fragment_incoming_packets.xml
@@ -1,16 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".IncomingPacketsFragment">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        style="@style/TitleTextStyle"
+    <data>
+
+        <variable
+            name="model"
+            type="com.google.hellocloud.Main" />
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:text="Incoming packets" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".IncomingPacketsFragment">
 
-</LinearLayout>
+        <TextView
+            style="@style/TitleTextStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:text="Incoming packets" />
+
+        <ExpandableListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:divider="@android:color/darker_gray"
+            android:dividerHeight="0.5dp"
+            android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
+            app:entries="@{model.incomingPackets}" />
+    </LinearLayout>
+</layout>
