--- a/hello_cloud_android/app/src/main/res/layout/item_incoming_packet.xml
+++ b/hello_cloud_android/app/src/main/res/layout/item_incoming_packet.xml
@@ -9,16 +9,54 @@
     </data>
 
     <LinearLayout
+        style="@style/ListItemStyle"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="16dp">
 
-        <TextView
+        <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
             android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:text="@{model.incomingDescription}" />
+            android:paddingBottom="5dp">
 
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/photo" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="@{model.incomingDescription}" />
+
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent">
+
+                <ProgressBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:visibility="@{model.isBusy ? android.view.View.VISIBLE : android.view.View.INVISIBLE}" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:src="@{model.incomingStateIcon}" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/download"
+                    android:visibility="@{model.canDownload ? android.view.View.VISIBLE : android.view.View.INVISIBLE}" />
+            </FrameLayout>
+        </LinearLayout>
     </LinearLayout>
 </layout>
