Android: Hook up download and upload buttons with Packet.download() and Packet.upload()

--- a/hello_cloud_android/app/src/main/res/layout/item_incoming_packet.xml
+++ b/hello_cloud_android/app/src/main/res/layout/item_incoming_packet.xml
@@ -51,10 +51,12 @@
                     android:layout_gravity="center"
                     android:src="@{model.incomingStateIcon}" />
 
-                <ImageView
+                <ImageButton
+                    android:onClick="downloadPacket"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:src="@drawable/download"
+                    android:background="@null"
                     android:visibility="@{model.canDownload ? android.view.View.VISIBLE : android.view.View.INVISIBLE}" />
             </FrameLayout>
         </LinearLayout>
