--- a/hello_cloud_android/app/src/main/res/layout/item_outgoing_packet.xml
+++ b/hello_cloud_android/app/src/main/res/layout/item_outgoing_packet.xml
@@ -51,10 +51,12 @@
                     android:layout_gravity="center"
                     android:src="@{model.outgoingStateIcon}" />
 
-                <ImageView
+                <ImageButton
+                    android:onClick="uploadPacket"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:src="@drawable/upload"
+                    android:background="@null"
                     android:visibility="@{model.canUpload ? android.view.View.VISIBLE : android.view.View.INVISIBLE}" />
             </FrameLayout>
         </LinearLayout>
