--- a/hello_cloud_android/app/src/main/res/layout/item_outgoing_file.xml
+++ b/hello_cloud_android/app/src/main/res/layout/item_outgoing_file.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:paddingStart="?android:attr/expandableListPreferredChildPaddingLeft"
         android:padding="16dp">
 
         <ImageView
