--- a/hello_cloud_android/app/src/main/res/layout/item_incoming_packet.xml
+++ b/hello_cloud_android/app/src/main/res/layout/item_incoming_packet.xml
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft">
+        android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
+        android:background="@{model.highlighted ? @color/packet_highlight : @android:color/transparent}">
 
         <LinearLayout
             android:layout_width="fill_parent"
