--- a/hello_cloud_android/app/src/main/res/values/colors.xml
+++ b/hello_cloud_android/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="packet_highlight">#A0FC6600</color>
 </resources>
