--- a/hello_cloud_android/app/src/main/res/layout/fragment_incoming_packets.xml
+++ b/hello_cloud_android/app/src/main/res/layout/fragment_incoming_packets.xml
@@ -23,12 +23,18 @@
             android:padding="5dp"
             android:text="Incoming packets" />
 
-        <ExpandableListView
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/refresher"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:divider="@android:color/darker_gray"
-            android:dividerHeight="1dp"
-            android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
-            app:entries="@{model.incomingPackets}" />
+            android:layout_height="match_parent">
+
+            <ExpandableListView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:divider="@android:color/darker_gray"
+                android:dividerHeight="1dp"
+                android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
+                app:entries="@{model.incomingPackets}" />
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     </LinearLayout>
 </layout>
