--- a/hello_cloud_android/app/src/main/res/layout/fragment_main.xml
+++ b/hello_cloud_android/app/src/main/res/layout/fragment_main.xml
@@ -153,6 +153,30 @@
                 android:text="Outbox" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/send_qr"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="10dp"
+                android:layout_weight="1"
+                android:onClick="showIncomingPackets"
+                android:text="Send QR" />
+
+            <Button
+                android:id="@+id/receive_qr"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="10dp"
+                android:layout_weight="1"
+                android:onClick="showOutgoingPackets"
+                android:text="Receive QR" />
+        </LinearLayout>
+
         <ListView
             android:layout_width="match_parent"
             android:layout_height="0dp"
