--- a/hello_cloud_android/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/hello_cloud_android/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,22 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="32"
+    android:viewportHeight="32">
+    <group
+        android:translateX="4"
+        android:translateY="4">
+        <path
+            android:fillColor="#4285f4"
+            android:pathData="M21.74,12.89l-4.12,4.13l-1.06,-1.07l2.32,-2.31l-7.62,0l0,-1.5l7.62,0l-2.32,-2.32l1.06,-1.06l4.12,4.13z" />
+        <path
+            android:fillColor="#aecbfa"
+            android:pathData="M11.77,4.76l0.3,0.3V6l-0.3,0.3A4.69,4.69 0,0 0,7.4 10l-0.13,0.51 -0.52,0.05a3.19,3.19 0,0 0,-3 3,2.83 2.83,0 0,0 0,0.41L2.52,15a4.1,4.1 0,0 1,-0.28 -1.48A4.61,4.61 0,0 1,6.09 9.14,6.12 6.12,0 0,1 11.77,4.76Z" />
+        <path
+            android:fillColor="#4285f4"
+            android:pathData="M14.01,17.45l-7.63,0l2.32,2.32l-1.06,1.06l-4.13,-4.13l4.13,-4.13l1.06,1.07l-2.32,2.31l7.63,0l0,1.5z" />
+        <path
+            android:fillColor="#669df6"
+            android:pathData="M16.63,7.49l-1.1,1a4.45,4.45 0,0 0,-3.76 -2.27V4.76A5.88,5.88 0,0 1,16.63 7.49Z" />
+    </group>
 </vector>
